# Musicsloth

./: PROJECT_PLAN.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
docs/: FFMPEG_INTEGRATION_PLAN.md  SYMPHONIA_INTEGRATION_PLAN.md  shuffle-mechanism.md
src/: App.css  App.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json  test_lofty.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/audio/: decoder.rs  mod.rs  output.rs  player.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  models.rs  operations.rs  queries.rs
src-tauri/src/metadata/: artwork.rs  extractor.rs  loudness.rs  lyrics.rs  mod.rs  parser.rs
src-tauri/src/playlist/: import_export.rs  manager.rs  mod.rs
src-tauri/src/queue/: manager.rs  mod.rs  persistence.rs
src-tauri/src/settings/: mod.rs  settings.rs
src-tauri/src/smtc/: mod.rs  windows_smtc.rs
src/components/: AddToPlaylistDialog.tsx  AddToQueueDialog.tsx  CreatePlaylistDialog.tsx  LibraryScanner.tsx  PlayerControls.tsx  PlaylistContextMenu.tsx  PlaylistNameDialog.tsx  SearchBar.tsx  SongInfoDialog.tsx  TextInputDialog.tsx  TrackContextMenu.tsx  TrackList.tsx  VirtualTrackList.tsx
src/contexts/: PlayerContext.tsx  SettingsContext.tsx
src/services/: api.ts  audioPlayer.ts  smtcService.ts
src/types/: index.ts
src/views/: AlbumsView.tsx  ArtistsView.tsx  GenresView.tsx  LibraryView.tsx  NowPlayingView.tsx  OptionsView.tsx  PlaylistsView.tsx  QueuesView.tsx
