[package]
name = "musicsloth"
version = "0.1.0"
description = "A desktop music player inspired by Musicolet"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "musicsloth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Metadata parsing
lofty = "0.22"
id3 = "1.16"  # Fallback for MP3 files with malformed tags
regex = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system utilities
walkdir = "2"

# Time utilities
chrono = "0.4"

# Hashing for file change detection
sha2 = "0.10"
blake3 = "1.5"

# Random number generation for shuffle
rand = "0.8"

# Parallel processing for loudness analysis
rayon = "1.10"

# Audio decoding (pure Rust)
symphonia = { version = "0.5", features = [
    "mp3",      # MP3 support
    "aac",      # AAC support
    "flac",     # FLAC support
    "ogg",      # OGG container
    "wav",      # WAV support
    "pcm",      # PCM codec
    "vorbis",   # Vorbis codec
    "isomp4",   # MP4/M4A container
] }

# Cross-platform audio output
cpal = "0.15"

# Thread-safe ring buffer for audio samples
ringbuf = "0.4"

# Better locks for audio thread
parking_lot = "0.12"

# Sample rate conversion
rubato = "0.15"

# Loudness analysis for ReplayGain/volume normalization (EBU R128 standard)
ebur128 = "0.1"

# Image decoding for app icon
image = { version = "0.25", default-features = false, features = ["png"] }

# Windows SMTC (System Media Transport Controls)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Foundation",
    "Media",
    "Media_Playback",
    "Storage",
    "Storage_Streams",
] }

